Fix alignment between containers inside content

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ label {
 /* Main Container */
 .main {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: 0.25fr 1fr 0.5fr;
     grid-template-rows: 0.5fr 2fr;
     height: 100vh;
 }
@@ -84,7 +84,7 @@ label {
 .header {
     display: grid;
     grid-column: 2 / -1;
-    grid-row:  1;
+    grid-row: 1;
     grid-template-columns: 1fr 0.5fr;
     font-family: Heebo, sans-serif;
     color: #394148;
@@ -128,7 +128,7 @@ label {
     grid-row: 2 / 3;
     display: grid;
     grid-template-columns: 1fr 0.5fr;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: auto auto;
     gap: 1.75rem;
     font-family: Heebo, sans-serif;
     color: #394148;
@@ -168,7 +168,7 @@ label {
             background-color: #f5f5f5;
             display: grid;
             grid-template-columns: 1fr;
-            grid-template-rows: 0.2fr 1fr 0.25fr;
+            grid-template-rows: 0.25fr 1fr 0.25fr;
         }
 
         .project > div h3 {
@@ -204,14 +204,14 @@ label {
             display: grid;
             grid-template-columns: 1fr;
             grid-template-rows: repeat(3, 1fr);
-            gap: 0.75rem;
+            gap: 0.5rem;
             background-color: #f5f5f5;
         }
 
-        .announcements > div > div {
+        /* .announcements > div > div {
             border-bottom: 1px dashed black;
             padding-bottom: 0.75rem;
-        }
+        } */
 
         .announcements h3 {
             font-weight: 400;
@@ -227,6 +227,10 @@ label {
         grid-column: 2;
         grid-row: 2;
     }
+
+        .todolist > h2 {
+            margin: 0;
+        }
         .todolist > p {
             margin-bottom: 0.83em;
         }
